--- a/suggestions.html
+++ b/suggestions.html
@@ -102,7 +102,7 @@
             <li><a href="shawebsite.html">Home</a></li>
             <li><a href="previoustopics.html">Previous Topics</a></li>
             <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="aboutvision.html" class="current">Suggestions</a></li>
+            <li><a href="suggestions.html" class="current">Suggestions</a></li>
           </ul>
         </nav>
       </header>
